# tiny-core

./: CMakeLists.txt  LICENSE  README.md
cmake/: build_n32g45x.sh  linux_arm-fsl.cmake  linux_arm.cmake  linux_x86.cmake  macos.cmake  n32g45x-cortex-m4-gcc-arm-none-eabi.cmake  windows_x86.cmake
samples/esp32/http-client/main/: component.mk
src/ByteBuffer/: ByteBuffer.c  ByteBuffer.h
src/Json/: JsonArray.c  JsonArray.h  JsonDefinitions.c  JsonDefinitions.h  JsonObject.c  JsonObject.h  JsonValue.c  JsonValue.h
src/Json/codec/: JsonDecoder.c  JsonDecoder.h  JsonEncoder.c  JsonEncoder.h  JsonToken.c  JsonToken.h  JsonTokenizer.c  JsonTokenizer.h
src/Json/value/: JsonBoolean.c  JsonBoolean.h  JsonNumber.c  JsonNumber.h  JsonString.c  JsonString.h
src/StringArray/: StringArray.c  StringArray.h
src/TinyBase/: tiny_ret.c  tiny_ret.h
src/TinyContainer/: TinyList.c  TinyList.h  TinyMap.c  TinyMap.h  TinyMapItem.c  TinyMapItem.h  TinyQueue.c  TinyQueue.h
src/TinyLog/: tiny_log.c  tiny_log.h  tiny_print_binary.c  tiny_print_binary.h
src/TinyLog/macos/: tiny_log_impl.c
src/TinyLog/n32g45x/: tiny_log_impl.h
src/TinyLog/windows/: tiny_log_impl.c  tiny_log_impl.h
src/TinyPortable/: CMakeLists.txt  tiny_inline.h  tiny_malloc.c  tiny_malloc.h  tiny_snprintf.h  tiny_strdup.c  tiny_strdup.h  tiny_time.c  tiny_time.h
src/TinyPortable/esp32/: tiny_time.c
src/TinyPortable/esp8266/: tiny_malloc.c  tiny_malloc.h  tiny_time.c
src/TinyPortable/linux/: tiny_malloc.c  tiny_malloc.h  tiny_time.c
src/TinyPortable/macos/: tiny_malloc.c  tiny_malloc.h  tiny_time.c
src/TinyPortable/mt7697/: tiny_time.c
src/TinyPortable/n32g45x/: tiny_inline.h  tiny_malloc.c  tiny_malloc.h  tiny_snprintf.h  tiny_time.c  tiny_time.h
src/TinyPortable/openwrt_mt7688/: tiny_malloc.h
src/TinyPortable/windows/: tiny_malloc.h  tiny_time.c
src/TinyStringUtil/: tiny_buffer_append.c  tiny_buffer_append.h  tiny_char_util.c  tiny_char_util.h  tiny_str_equal.c  tiny_str_equal.h  tiny_str_split.c  tiny_str_split.h  tiny_strnlen.c  tiny_strnlen.h  tiny_url_split.c  tiny_url_split.h
test/Json/: test_json_encode.c
